// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`maskImage renders 0 1`] = `
Array [
  .c0 {
  -webkit-mask-image: 0;
  mask-image: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-image: 0;
  mask-image: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-image: 0;
  mask-image: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-image: 0;
  mask-image: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`maskImage renders function 1`] = `
Array [
  .c0 {
  -webkit-mask-image: hasnot;
  mask-image: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-image: has;
  mask-image: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-image: hasnot;
  mask-image: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-image: has;
  mask-image: has;
}

<div
    className="c0"
  />,
]
`;

exports[`maskImage renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-mask-image: invalid.path.1;
  mask-image: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-image: invalid.path.1;
  mask-image: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-image: invalid.path.1;
  mask-image: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-image: invalid.path.1;
  mask-image: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`maskImage renders negative number 1`] = `
Array [
  .c0 {
  -webkit-mask-image: -54881;
  mask-image: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-image: -54881;
  mask-image: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-image: -42365;
  mask-image: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-image: -42365;
  mask-image: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`maskImage renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  -webkit-mask-image: July;
  mask-image: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-image: August;
    mask-image: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-image: September;
    mask-image: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-image: November;
    mask-image: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-image: August;
    mask-image: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-image: July;
  mask-image: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-image: August;
    mask-image: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-image: September;
    mask-image: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-image: November;
    mask-image: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-image: August;
    mask-image: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-image: January;
  mask-image: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-image: December;
    mask-image: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-image: April;
    mask-image: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-image: May;
    mask-image: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-image: June;
    mask-image: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-image: January;
  mask-image: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-image: December;
    mask-image: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-image: April;
    mask-image: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-image: May;
    mask-image: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-image: June;
    mask-image: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maskImage renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-mask-image: July;
    mask-image: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-image: August;
    mask-image: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-image: September;
    mask-image: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-image: November;
    mask-image: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-mask-image: July;
    mask-image: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-image: August;
    mask-image: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-image: September;
    mask-image: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-image: November;
    mask-image: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-image: May;
    mask-image: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-image: June;
    mask-image: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-image: April;
    mask-image: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-image: November;
    mask-image: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-image: May;
    mask-image: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-image: June;
    mask-image: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-image: April;
    mask-image: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-image: November;
    mask-image: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maskImage renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  -webkit-mask-image: July;
  mask-image: July;
}

@media May {
  .c0 {
    -webkit-mask-image: August;
    mask-image: August;
  }
}

@media April {
  .c0 {
    -webkit-mask-image: September;
    mask-image: September;
  }
}

@media January {
  .c0 {
    -webkit-mask-image: November;
    mask-image: November;
  }
}

@media April {
  .c0 {
    -webkit-mask-image: August;
    mask-image: August;
  }
}

@media June {
  .c0 {
    -webkit-mask-image: November;
    mask-image: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-image: July;
  mask-image: July;
}

@media May {
  .c0 {
    -webkit-mask-image: August;
    mask-image: August;
  }
}

@media April {
  .c0 {
    -webkit-mask-image: September;
    mask-image: September;
  }
}

@media January {
  .c0 {
    -webkit-mask-image: November;
    mask-image: November;
  }
}

@media April {
  .c0 {
    -webkit-mask-image: August;
    mask-image: August;
  }
}

@media June {
  .c0 {
    -webkit-mask-image: November;
    mask-image: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-image: April;
  mask-image: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-mask-image: November;
    mask-image: November;
  }
}

@media April {
  .c0 {
    -webkit-mask-image: January;
    mask-image: January;
  }
}

@media January {
  .c0 {
    -webkit-mask-image: December;
    mask-image: December;
  }
}

@media April {
  .c0 {
    -webkit-mask-image: April;
    mask-image: April;
  }
}

@media June {
  .c0 {
    -webkit-mask-image: May;
    mask-image: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-image: April;
  mask-image: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-mask-image: November;
    mask-image: November;
  }
}

@media April {
  .c0 {
    -webkit-mask-image: January;
    mask-image: January;
  }
}

@media January {
  .c0 {
    -webkit-mask-image: December;
    mask-image: December;
  }
}

@media April {
  .c0 {
    -webkit-mask-image: April;
    mask-image: April;
  }
}

@media June {
  .c0 {
    -webkit-mask-image: May;
    mask-image: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maskImage renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    -webkit-mask-image: July;
    mask-image: July;
  }
}

@media April {
  .c0 {
    -webkit-mask-image: August;
    mask-image: August;
  }
}

@media January {
  .c0 {
    -webkit-mask-image: September;
    mask-image: September;
  }
}

@media April {
  .c0 {
    -webkit-mask-image: November;
    mask-image: November;
  }
}

@media June {
  .c0 {
    -webkit-mask-image: August;
    mask-image: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-mask-image: July;
    mask-image: July;
  }
}

@media April {
  .c0 {
    -webkit-mask-image: August;
    mask-image: August;
  }
}

@media January {
  .c0 {
    -webkit-mask-image: September;
    mask-image: September;
  }
}

@media April {
  .c0 {
    -webkit-mask-image: November;
    mask-image: November;
  }
}

@media June {
  .c0 {
    -webkit-mask-image: August;
    mask-image: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-mask-image: January;
    mask-image: January;
  }
}

@media April {
  .c0 {
    -webkit-mask-image: December;
    mask-image: December;
  }
}

@media January {
  .c0 {
    -webkit-mask-image: April;
    mask-image: April;
  }
}

@media April {
  .c0 {
    -webkit-mask-image: May;
    mask-image: May;
  }
}

@media June {
  .c0 {
    -webkit-mask-image: June;
    mask-image: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-mask-image: January;
    mask-image: January;
  }
}

@media April {
  .c0 {
    -webkit-mask-image: December;
    mask-image: December;
  }
}

@media January {
  .c0 {
    -webkit-mask-image: April;
    mask-image: April;
  }
}

@media April {
  .c0 {
    -webkit-mask-image: May;
    mask-image: May;
  }
}

@media June {
  .c0 {
    -webkit-mask-image: June;
    mask-image: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maskImage renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-mask-image: 54881;
  mask-image: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-image: 54881;
  mask-image: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-image: 42365;
  mask-image: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-image: 42365;
  mask-image: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`maskImage renders string 1`] = `
Array [
  .c0 {
  -webkit-mask-image: July;
  mask-image: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-image: July;
  mask-image: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-image: June;
  mask-image: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-image: June;
  mask-image: June;
}

<div
    className="c0"
  />,
]
`;

exports[`maskImage renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`maskImage renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-mask-image: DarkSlateBlue;
  mask-image: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-image: DarkSlateBlue;
  mask-image: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-image: DarkSlateBlue;
  mask-image: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-image: DarkSlateBlue;
  mask-image: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
